--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/001.loader.js";
       var config = {
-        dataUrl: buildUrl + "/001.data.br",
-        frameworkUrl: buildUrl + "/001.framework.js.br",
-        codeUrl: buildUrl + "/001.wasm.br",
+        dataUrl: buildUrl + "/001.data.unityweb",
+        frameworkUrl: buildUrl + "/001.framework.js.unityweb",
+        codeUrl: buildUrl + "/001.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "laxcade",
